# AI-Software-Delivery-Team-Multi-Agent-Workflow-Orchestration-Platform

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LOCAL_TESTING.md  README.md  requirements.txt  run-local.ps1  run-local.sh
backend/: .env.example  .gcloudignore  Dockerfile  pyproject.toml
backend/frontend/: app.js  index.html  style.css
backend/scripts/: run_demo.py  run_evaluation.py
backend/src/ai_sdlc/: __init__.py  agents.py  api.py  context.py  graph.py  llm.py  logging_config.py  schemas.py  state.py  store.py  tools.py
backend/tests/: test_streaming.py  test_workflow.py
docs/: 01_use_case_and_architecture.md  02_issues_and_resolutions.md  03_technology_stack.md  04_operations_guide.md  05_hallucination_and_evaluation.md  06_resume_project_breakdown.md
frontend/: .env.example  .gcloudignore  Dockerfile  pyproject.toml  streamlit_app.py
scripts/: deploy-cloud-run.ps1  run_demo.py  setup-gcp-infrastructure-simple.ps1
src/ai_sdlc/: __init__.py  agents.py  api.py  graph.py  llm.py  models.py  schemas.py  state.py  store.py
tests/: test_workflow.py
