[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sdlc-backend"
version = "0.1.0"
description = "LangGraph + FastAPI orchestrated multi-agent SDLC workflow with human approval"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AI Software Delivery Team"}
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-google-genai",
    "langgraph",
    "langgraph-checkpoint-redis",
    "pydantic",
    "python-dotenv",
    "google-cloud-firestore>=2.14.0",
    "redis>=5.0.0",
    "google-cloud-logging>=3.8.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "bandit",
    "pip-audit",
    "langsmith>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-sdlc"
Repository = "https://github.com/yourusername/ai-sdlc"

[tool.setuptools.packages.find]
where = ["src"]
